@@ -5,13 +5,12 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import showroomz.api.app.faq.dto.FaqCategoryItem;
 import showroomz.api.app.faq.dto.FaqResponse;
+import showroomz.domain.cs.type.CsCategory;
 import showroomz.domain.faq.entity.Faq;
 import showroomz.domain.faq.repository.FaqRepository;
-import showroomz.domain.faq.type.FaqCategory;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,29 +20,19 @@ public class FaqService {
     private final FaqRepository faqRepository;
 
     // FAQ 목록 조회. category=전체/null이면 전체, keyword 있으면 질문 검색
-    public List<FaqResponse> getFaqList(String keyword, FaqCategory category) {
-        boolean hasKeyword = keyword != null && !keyword.isBlank();
-        String trimmedKeyword = (keyword == null) ? null : keyword.trim();
-        boolean filterByCategory = category != null && category.isPersistable();
-
-        List<Faq> faqs;
-        if (filterByCategory && hasKeyword) {
-            faqs = faqRepository.findAllByCategoryAndQuestionContainingIgnoreCaseOrderByDisplayOrderAscIdAsc(category, trimmedKeyword);
-        } else if (filterByCategory) {
-            faqs = faqRepository.findAllByCategoryOrderByDisplayOrderAscIdAsc(category);
-        } else if (hasKeyword) {
-            faqs = faqRepository.findAllByQuestionContainingIgnoreCaseOrderByDisplayOrderAscIdAsc(trimmedKeyword);
-        } else {
-            faqs = faqRepository.findAllByOrderByDisplayOrderAscIdAsc();
-        }
-        return faqs.stream().map(FaqResponse::from).collect(Collectors.toList());
+    // 정렬은 운영자가 정한 카테고리 내 노출 순서를 그대로 따른다 (기획 §19-4)
+    public List<FaqResponse> getFaqList(String keyword, CsCategory category) {
+        List<Faq> faqs = faqRepository.findAppFaqList(category, keyword);
+        return faqs.stream().map(FaqResponse::from).toList();
     }
 
-    // FAQ 카테고리 고정 목록 (key: enum 이름, description: 한글 표시명)
+    // FAQ 카테고리 고정 목록 (key: enum 이름, description: 한글 표시명) — 전체 칩 + 5종
     public List<FaqCategoryItem> getFaqCategories() {
-        return Arrays.stream(FaqCategory.values())
-                .map(FaqCategoryItem::from)
-                .toList();
+        List<FaqCategoryItem> categories = new ArrayList<>();
+        categories.add(FaqCategoryItem.all());
+        for (CsCategory category : CsCategory.values()) {
+            categories.add(FaqCategoryItem.from(category));
+        }
+        return categories;
     }
 }
-
